Fix spacing

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -141,7 +141,7 @@ h4 {
 
 .grid span.label {
   margin-top: 0;
-  padding: 0 2em 0 0;
+  padding: 0 0em 0 0;
   cursor: default;
   background: var(--background-blue);
   min-width: 150px;
